# EmailTriage

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
env/: email_env.py  graders.py  models.py  sla.py
env/data/: bilingual.py  emails.py  threads.py
server/: app.py
